﻿v1.3.5

Phase Monitor
* Change: The Phase Monitor has been adjusted to allow for tracking of multiple units with the same name.

Encounter Checking
* Change: Phase Monitor linking now occurs when a new Encounter Unit is detected.

Unit Cache
* Change: Reference Lists for missing UTIDs are compiled fresh each run.

Rift:Storm Legion

Raids
* Endless Eclipse
** Dread Lord Goloch
** Matriarch of Pestilence
** Progenitor
** Kain the Reaper

* Frozen Tempest
** Gangnum
** Gelidra
** Kolmasveli and Toinenveli
** Zaviel
** Crucia

Slivers
* Triumph of the Dragon Queen
** Grand Falconer Zoles
** General Typhiria
** Jultharin
** Cyril

Expert Dungeons
* Archive of Flesh
** Ahzrius
** Cahail
** Emphalea
** Tzul

* Empyrean Core
** Baird Bringhurst
** Kaliban's Bodyguards
** Core Meltdown
** Doctor Perfidus
** Prince Kaliban

* Golem Foundry
** Locomotive Bulwark
*** New: UTID updated.
** C1-0N3
*** New: UTID updated for main C1-0N3
*** New: Added 2 addtional UTIDs found for other versions, left 1 open should there be more.
** Subversionary Liaz
*** New: UTID updated.
** Manslaughter
*** New: UTID updated.
** UV-315
*** New: UTID updated.

* Storm Breaker Protocol
** Sandswarm Onslaught
** Baron Slagstorm
** Telaphalon
** Vellion the Pestilent
** Citybreaker Zidae

* Tower of the Shattered
** Overseer Cowel
*** New: UTID updated.
** Kronox
*** New: UTID updated.
** Psychophage Primakov
*** New: UTID udpated.
** General Thunderscar
*** New: UTID updated.
** Commissar Varoniss
*** New: UTID updated.

* Unhallowed Boneforge
** Ahgnox
** Avoxcia
** Bruzhail
** Forgelord Helix
** Necrotic Throne

Normal Dungeons
* Unhallowed Boneforge
** Ahgnox the Corpsekeeper
*** New: UTID updated.
*** Fixed: Name corrected.
** Avoxcia
*** New: UTID updated.
** Bruzhail the Black Chariot
*** New: UTID updated.
*** Fixed: Name corrected.
** Forgelord Helix
*** New: UTID updated.
** Necrotic Throne
*** New: UTID updated for main Throne.