@@ -10,7 +10,7 @@ Author = "Paul Snart"
 Website = "http://www.facebook.com/KingBossMods"
 Email = "snarty@gmail.com"
 
-Version = "1.3.5.600"
+Version = "1.3.5.601"
 
 Environment = "1.9", "1.10", "1.11", "2.0"
 
